--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -227,7 +227,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" (click)="clearFiltersCards()">Limpiar filtros</button>
-            <button type="button" class="btn btn-primary" (click)="closeModalCards()">Cerrar</button>
+            <button type="button" class="btn btn-primary" (click)="closeModalCards()">Aplicar filtros</button>
           </div>
         </ng-template>
       </div>
@@ -342,7 +342,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
             xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
             viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#000000 " role="img"
-            aria-label="Illustration of a Funnel" class="hoverSvgFilter">
+            aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilter">
             <g id="__id33_ssutzzo1g">
               <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
                 style="fill: inherit"></path>
@@ -467,7 +467,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-danger" (click)="clearFilters()">Limpiar filtros</button>
-              <button type="button" class="btn btn-primary" (click)="closeModal()">Cerrar</button>
+              <button type="button" class="btn btn-primary" (click)="closeModal()">Aplicar filtros</button>
             </div>
           </ng-template>
         </div>
