--- a/src/app/components/productos/cat-mujer/cat-mujer.component.html
+++ b/src/app/components/productos/cat-mujer/cat-mujer.component.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" (click)="clearFilters()">Limpiar filtros</button>
-                    <button type="button" class="btn btn-primary" (click)="closeModal()">Cerrar</button>
+                    <button type="button" class="btn btn-primary" (click)="closeModal()">Aplicar filtros</button>
                 </div>
             </ng-template>
         </div>
@@ -231,7 +231,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" (click)="clearFilters2()">Limpiar filtros</button>
-                    <button type="button" class="btn btn-primary" (click)="closeModal2()">Cerrar</button>
+                    <button type="button" class="btn btn-primary" (click)="closeModal2()">Aplicar filtros</button>
                 </div>
             </ng-template>
         </div>
