--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" (click)="clearFilters()">Limpiar filtros</button>
-                    <button type="button" class="btn btn-primary" (click)="closeModal()">Cerrar</button>
+                    <button type="button" class="btn btn-primary" (click)="closeModal()">Aplicar filtros</button>
                 </div>
             </ng-template>
         </div>
@@ -226,7 +226,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" (click)="clearFilters2()">Limpiar filtros</button>
-                    <button type="button" class="btn btn-primary" (click)="closeModal2()">Cerrar</button>
+                    <button type="button" class="btn btn-primary" (click)="closeModal2()">Aplicar filtros</button>
                 </div>
             </ng-template>
         </div>
@@ -259,7 +259,7 @@
             <ng-template #template3>
                 <div class="modal-header">
                     <h4 class="modal-title pull-left">Filtros</h4>
-                    <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal2()">
+                    <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal3()">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -321,8 +321,8 @@
                     </ul>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" (click)="clearFilters2()">Limpiar filtros</button>
-                    <button type="button" class="btn btn-primary" (click)="closeModal3()">Cerrar</button>
+                    <button type="button" class="btn btn-danger" (click)="clearFilters3()">Limpiar filtros</button>
+                    <button type="button" class="btn btn-primary" (click)="closeModal3()">Aplicar filtros</button>
                 </div>
             </ng-template>
         </div>
