--- a/src/app/components/informe-categoria/table2/table2.component.css
+++ b/src/app/components/informe-categoria/table2/table2.component.css
@@ -1,10 +1,3 @@
-#date1 {
-  border: none;
-  border-radius: 5%;
-  background-color: #f1f1f1;
-  padding: 0 0 0.5rem 0.4rem;
-}
-
 /* Tablas */
 .container-scroll {
   height: 250px;
@@ -12,7 +5,19 @@
 
 .filterTable {
   display: grid;
-  grid-template-columns: 97% 3%;
+  grid-template-columns: 98% 2%;
+}
+
+.svgFilter {
+  margin-top: 7px;
+}
+
+@media screen and (max-width: 600px) {
+
+  .filterTable {
+    display: grid;
+    grid-template-columns: 90% 10%;
+  }
 }
 
 .tableContainer {
