--- a/src/app/components/productos/cat-hombre/cat-hombre.component.html
+++ b/src/app/components/productos/cat-hombre/cat-hombre.component.html
@@ -111,7 +111,7 @@
             Limpiar filtros
           </button>
           <button type="button" class="btn btn-primary" (click)="closeModal()">
-            Cerrar
+            Aplicar filtros
           </button>
         </div>
       </ng-template>
@@ -252,7 +252,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" (click)="clearFilters2()">Limpiar filtros</button>
-          <button type="button" class="btn btn-primary" (click)="closeModal2()">Cerrar</button>
+          <button type="button" class="btn btn-primary" (click)="closeModal2()">Aplicar filtros</button>
         </div>
       </ng-template>
     </div>
