Cerrar modal cards arreglado

--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -112,7 +112,7 @@
         <ng-template #templateCards>
           <div class="modal-header">
             <h4 class="modal-title pull-left">Filtros</h4>
-            <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal()">
+            <button type="button" class="close pull-right" aria-label="Close" (click)="closeModalCards()">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
