--- a/src/app/components/productos/cat-kids/cat-kids.component.html
+++ b/src/app/components/productos/cat-kids/cat-kids.component.html
@@ -262,89 +262,75 @@
 
                 <tbody>
                     <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/calzado.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">85</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Blanco</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[0]}}"><img src="../../../../assets/productos/{{topTenTipoPrenda[0] !== '' ? topTenTipoPrenda[0] +'.png' : default.png}}" alt=""
+                            class="imgPrendasTabla" /></abbr></td>
+                        <td>{{topTenTotalSKU[0]}}</td>
+                        <td>{{topTenPorcentajeSKU[0]}}%</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[0]}}"><div style="background-color:{{topTenColoresRGB[0]}}" class="colorx mb-3"></div></abbr></td>
                     </tr>
                     <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/exterior.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">75</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Negro</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[1]}}"><img src="../../../../assets/productos/{{topTenTipoPrenda[1] !== '' ? topTenTipoPrenda[1] +'.png' : default.png}}" alt=""
+                            class="imgPrendasTabla" /></abbr></td>
+                        <td>{{topTenTotalSKU[1]}}</td>
+                        <td>{{topTenPorcentajeSKU[1]}}%</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[1]}}"><div style="background-color:{{topTenColoresRGB[1]}}" class="colorx mb-3"></div></abbr></td>
                     </tr>
                     <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/interior.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">80</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Amarillo</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[2]}}"><img src="../../../../assets/productos/{{topTenTipoPrenda[2] !== '' ? topTenTipoPrenda[2] +'.png' : default.png}}" alt=""
+                            class="imgPrendasTabla" /></abbr></td>
+                        <td>{{topTenTotalSKU[2]}}</td>
+                        <td>{{topTenPorcentajeSKU[2]}}%</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[2]}}"><div style="background-color:{{topTenColoresRGB[2]}}" class="colorx mb-3"></div></abbr></td>
                     </tr>
                     <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/accesorios.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">60</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Cafe</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[3]}}"><img src="../../../../assets/productos/{{topTenTipoPrenda[3] !== '' ? topTenTipoPrenda[3] +'.png' : default.png}}" alt=""
+                            class="imgPrendasTabla" /></abbr></td>
+                        <td>{{topTenTotalSKU[3]}}</td>
+                        <td>{{topTenPorcentajeSKU[3]}}%</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[3]}}"><div style="background-color:{{topTenColoresRGB[3]}}" class="colorx mb-3"></div></abbr></td>
                     </tr>
                     <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/calzado.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">85</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Blanco</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[4]}}"><img src="../../../../assets/productos/{{topTenTipoPrenda[4] !== '' ? topTenTipoPrenda[4] +'.png' : default.png}}" alt=""
+                            class="imgPrendasTabla" /></abbr></td>
+                        <td>{{topTenTotalSKU[4]}}</td>
+                        <td>{{topTenPorcentajeSKU[4]}}%</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[4]}}"><div style="background-color:{{topTenColoresRGB[4]}}" class="colorx mb-3"></div></abbr></td>
                     </tr>
                     <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/exterior.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">75</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Negro</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[5]}}"><img src="../../../../assets/productos/{{topTenTipoPrenda[5] !== '' ? topTenTipoPrenda[5] +'.png' : default.png}}" alt=""
+                            class="imgPrendasTabla" /></abbr></td>
+                        <td>{{topTenTotalSKU[5]}}</td>
+                        <td>{{topTenPorcentajeSKU[5]}}%</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[5]}}"><div style="background-color:{{topTenColoresRGB[5]}}" class="colorx mb-3"></div></abbr></td>
                     </tr>
                     <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/interior.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">80</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Amarillo</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[6]}}"><img src="../../../../assets/productos/{{topTenTipoPrenda[6] !== '' ? topTenTipoPrenda[6] +'.png' : default.png}}" alt=""
+                            class="imgPrendasTabla" /></abbr></td>
+                        <td>{{topTenTotalSKU[6]}}</td>
+                        <td>{{topTenPorcentajeSKU[6]}}%</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[6]}}"><div style="background-color:{{topTenColoresRGB[6]}}" class="colorx mb-3"></div></abbr></td>
                     </tr>
                     <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/accesorios.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">60</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Cafe</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[7]}}"><img src="../../../../assets/productos/{{topTenTipoPrenda[7] !== '' ? topTenTipoPrenda[7] +'.png' : default.png}}" alt=""
+                                class="imgPrendasTabla" /></abbr></td>
+                        <td>{{topTenTotalSKU[7]}}</td>
+                        <td>{{topTenPorcentajeSKU[7]}}%</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[7]}}"><div style="background-color:{{topTenColoresRGB[7]}}" class="colorx mb-3"></div></abbr></td>
                     </tr>
                     <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/calzado.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">85</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Blanco</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[8]}}"><img src="../../../../assets/productos/{{topTenTipoPrenda[8] !== '' ? topTenTipoPrenda[8] +'.png' : default.png}}" alt=""
+                            class="imgPrendasTabla" /></abbr></td>
+                        <td>{{topTenTotalSKU[8]}}</td>
+                        <td>{{topTenPorcentajeSKU[8]}}%</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[8]}}"><div style="background-color:{{topTenColoresRGB[8]}}" class="colorx mb-3"></div></abbr></td>
                     </tr>
                     <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/exterior.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">75</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Negro</td>
-                    </tr>
-                    <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/interior.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">80</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Amarillo</td>
-                    </tr>
-                    <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/accesorios.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">60</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Cafe</td>
-                    </tr>
+                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[9]}}"><img src="../../../../assets/productos/{{topTenTipoPrenda[9] !== '' ? topTenTipoPrenda[9] +'.png' : default.png}}" alt=""
+                            class="imgPrendasTabla" /></abbr></td>
+                        <td>{{topTenTotalSKU[9]}}</td>
+                        <td>{{topTenPorcentajeSKU[9]}}%</td>
+                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[9]}}"><div style="background-color:{{topTenColoresRGB[9]}}" class="colorx mb-3"></div></abbr></td>
+                    </tr>                    
                 </tbody>
             </table>
         </div>
