se organiza descontinuados

--- a/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.css
+++ b/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.css
@@ -225,3 +225,11 @@ tr:hover td {
     margin-left: 0px;
   }
 }
+
+.diferencia {
+  color: rgb(103 209 166);
+}
+
+.diferencia2 {
+  color: rgb(255 92 96);
+}
