--- a/src/app/components/informes/informe-precio/informe-precio.component.html
+++ b/src/app/components/informes/informe-precio/informe-precio.component.html
@@ -311,10 +311,10 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let e of photos">
-          <td data-label="Categoría" class="alignTableItems"> {{e.categoria}} </td>
-          <td data-label="Subcategoría" class="alignTableItems"> {{e.subCategoria}} </td>
-          <td data-label="Tipo de prenda" class="alignTableItems"> {{e.tipoPrenda}} </td>
+        <tr *ngFor="let item of photos; trackBy:TrackByFn">
+          <td data-label="Categoría" class="alignTableItems"> {{item.categoria}} </td>
+          <td data-label="Subcategoría" class="alignTableItems"> {{item.subCategoria}} </td>
+          <td data-label="Tipo de prenda" class="alignTableItems"> {{item.tipoPrenda}} </td>
           <td data-label="Precio promedio" class="alignTableItems"> $ {{tableAvgPrice}} </td>
           <td data-label="Diferencia" [ngClass]="diferencia()" class="alignTableItems"> {{tableDifference[1]}} </td>
         </tr>
